1. upgrade to spring-boot 3.5.10 2. upgrade to spring-cloud 2025.0.1 3. upgrade to dubbo 3.2.19 4. upgrade to seata 2.6.0 5. upgrade to maven-compiler-plugin 3.15.0 6. upgrade to maven-source-plugin 3.4.0