@@ -8,7 +8,6 @@ import org.springframework.http.client.ClientHttpResponse;
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -61,7 +60,7 @@ public class ExceptionUtil {
         public HttpHeaders getHeaders() {
             Map<String, List<String>> headers = new HashMap<>();
             headers.put(HttpHeaders.CONTENT_TYPE,
-                    Arrays.asList(MediaType.APPLICATION_JSON_VALUE));
+                    List.of(MediaType.APPLICATION_JSON_VALUE));
             HttpHeaders httpHeaders = new HttpHeaders();
             httpHeaders.putAll(headers);
             return httpHeaders;
